@@ -1,3 +1,5 @@
+- New Fixture: tuition payment plan now shows if is reachable
+
 6.1.0 (10-03-2021)
 - Refactor: Builder class to create academic treasury target debts
 
